Upgrade to tailwind v4

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <div class="footer-style-two theme-basic-footer p-[0_10%] 2xl:p-[0_4%] lg:p-[0_12px] md:p-[0_12px] sm:p-[0_12px] xsm:p-[0_12px]">
-	<div class="top-footer relative border border-neutral-200 z-[1] p-[70px_12px_10px] md:p-[70px_12px_0] sm:p-[70px_12px_0] xsm:p-[70px_12px_0] rounded-[20px] border-solid">
+	<div class="top-footer relative border border-neutral-200 z-1 p-[70px_12px_10px] md:p-[70px_12px_0] sm:p-[70px_12px_0] xsm:p-[70px_12px_0] rounded-[20px] border-solid">
 		<div class="container">
 			<div class="inner-wrapper m-auto max-w-[1170px]">
 				<div class="flex flex-wrap mx-[-12px]">
@@ -8,7 +8,7 @@
 						<a href="mailto:hello@design2tailwind.com" class="email tran3s text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[1.67em] mt-[35px] mb-[15px] md:mt-[10px] sm:mt-[10px] xsm:mt-[10px] hover:underline hover:text-[#BC46E2]">hello@design2tailwind.com</a> <br>
 						<a href="#" class=""><img src="images/lazy.svg" data-src="images/icon/icon-twitter.svg" alt="" class="lazy-img h-9"></a>
 					</div>
-					<div class="xl:w-1/5 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full !ml-auto mb-[30px]">
+					<div class="xl:w-1/5 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full ml-auto! mb-[30px]">
 						<h5 class="font-Recoleta footer-title text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Links</h5>
 						<ul class="footer-nav-link mb-0 pl-0 list-none ">
 							<li><a  href="/" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="index.html">Home</a></li>
@@ -36,15 +36,15 @@
 		</div>
 		<div class="shapes shape-one rounded-[50%] absolute z-[-1] xxl:w-60 xxl:h-60 xl:w-52 xl:h-52 opacity-70 xxl:top-[-160px] xl:top-[-135px] left-[-120px] bg-[#FFBF44] md:w-[100px] md:h-[100px] md:top-[-50px] md:-left-3 sm:w-[100px] sm:h-[100px] sm:top-[-50px] sm:-left-3 xsm:w-[100px] xsm:h-[100px] xsm:top-[-50px] xsm:-left-3"></div>
 		<div class="shapes shape-two rounded-[50%] absolute z-[-1] xxl:w-[136px] xl:xl:w-28 xl:h-28 xxl:h-[136px] opacity-[0.65] right-[-70px] xxl:bottom-[-55px] xl:-bottom-8 bg-[#15B9FF] md:w-[50px] md:h-[50px] md:-right-3 md:bottom-0 sm:w-[50px] sm:h-[50px] sm:-right-3 sm:bottom-0 xsm:w-[50px] xsm:h-[50px] xsm:-right-3 xsm:bottom-0"></div>
-		<img src="images/lazy.svg" data-src="images/shape/shape_42.svg" alt="" class="lazy-img shapes shape-three absolute z-[-1] right-[-4%] top-[-14%] md:!hidden sm:!hidden xsm:!hidden">
-		<img src="images/lazy.svg" data-src="images/shape/shape_43.svg" alt="" class="lazy-img shapes shape-four absolute z-[-1] left-[-6%] bottom-[16%] md:!hidden sm:!hidden xsm:!hidden">
+		<img src="images/lazy.svg" data-src="images/shape/shape_42.svg" alt="" class="lazy-img shapes shape-three absolute z-[-1] right-[-4%] top-[-14%] md:hidden! sm:hidden! xsm:hidden!">
+		<img src="images/lazy.svg" data-src="images/shape/shape_43.svg" alt="" class="lazy-img shapes shape-four absolute z-[-1] left-[-6%] bottom-[16%] md:hidden! sm:hidden! xsm:hidden!">
 	</div> <!-- /.top-footer -->
-	<div class="bottom-footer relative z-[2] p-[40px_0_25px] md:p-[20px_0_0] sm:p-[20px_0_0] xsm:p-[20px_0_0]">
+	<div class="bottom-footer relative z-2 p-[40px_0_25px] md:p-[20px_0_0] sm:p-[20px_0_0] xsm:p-[20px_0_0]">
 		<div class="container">
 			<div class="inner-wrapper m-auto">
 				<div class="flex justify-center text-center">
 					<div class="mb-[15px]">
-						<p class="copyright text-center !m-0 text-[15px]">Copyright @2025 Design2Tailwind.</p>
+						<p class="copyright text-center m-0! text-[15px]">Copyright @2025 Design2Tailwind.</p>
 					</div>
 				</div>
 			</div> <!-- /.inner-wrapper -->
