--- a/src/pages/figma-to-tailwind.astro
+++ b/src/pages/figma-to-tailwind.astro
@@ -12,7 +12,7 @@ import Footer from '@components/Footer.astro';
 			<img src="images/logo/logo-figma.png" alt="" class="lazy-img h-10 md:h-12 lg:h-16 xl:h-16 mx-auto">
 			<div class="flex flex-wrap pt-7">
 				<div class="w-full lg:w-5/6 xl:w-2/3 mx-auto text-center wow fadeInUp">
-					<h1 class="hero-heading font-normal font-Recoleta relative text-[82px] 2xl:text-[70px] lg:text-[58px] md:text-[40px] md:leading-[1.2em] sm:text-[40px] sm:leading-[1.2em] xsm:text-4xl xsm:leading-[1.2em] leading-[1.09em]"><img src="images/lazy.svg" data-src="images/shape/shape_25.svg" alt="" class="lg:w-40 xl:w-56 lazy-img shapes line-shape absolute z-[-1] left-16 lg:left-40 xl:left-24 -bottom-4 md:!hidden sm:!hidden xsm:!hidden">Figma <span class="relative inline-block z-[1] before:content-[''] before:absolute before:-translate-y-2/4 before:w-[73%] before:h-[81%] before:z-[-1] before:left-[31%] before:top-2/4 before:bg-[#FFEBE5]">to</span> Tailwind.</h1>
+					<h1 class="hero-heading font-normal font-Recoleta relative text-[82px] 2xl:text-[70px] lg:text-[58px] md:text-[40px] md:leading-[1.2em] sm:text-[40px] sm:leading-[1.2em] xsm:text-4xl xsm:leading-[1.2em] leading-[1.09em]"><img src="images/lazy.svg" data-src="images/shape/shape_25.svg" alt="" class="lg:w-40 xl:w-56 lazy-img shapes line-shape absolute z-[-1] left-16 lg:left-40 xl:left-24 -bottom-4 md:hidden! sm:hidden! xsm:hidden!">Figma <span class="relative inline-block z-1 before:content-[''] before:absolute before:-translate-y-2/4 before:w-[73%] before:h-[81%] before:z-[-1] before:left-[31%] before:top-2/4 before:bg-[#FFEBE5]">to</span> Tailwind.</h1>
 					<p class=" text-base xl:text-xl lg:text-[19px] leading-[1.67em] xl:pt-10 lg:pt-7 md:pt-[10px] sm:pt-[10px] xsm:pt-[10px]">Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us. We work with PSD, Figma, Adobe XD and Sketch designs and with design hand-off tools like Invision and Zeplin.Line by line, handcrafted by us.
 					</p>
 				</div>
@@ -23,11 +23,11 @@ import Footer from '@components/Footer.astro';
 	<div class="fancy-feature-five xl:mb-24 lg:mb-20 md:mb-16 mb-12">
 		<div class="container">
 			<div class="flex flex-wrap items-center">
-				<div class="xl:w-[45%] lg:w-[45%] md:w-6/12 w-full flex-[0_0_auto] pl-[12px] max-w-full xl:order-last lg:order-last md:order-last !ml-auto">
-					<div class="block-style-two xxl:!pr-[3rem] sm:mb-[50px] xsm:mb-[50px]  wow fadeInRight">
+				<div class="xl:w-[45%] lg:w-[45%] md:w-6/12 w-full flex-[0_0_auto] pl-[12px] max-w-full xl:order-last lg:order-last md:order-last ml-auto!">
+					<div class="block-style-two xxl:pr-12! sm:mb-[50px] xsm:mb-[50px]  wow fadeInRight">
 						<div class="title-style-three">
 							<div class="sc-title uppercase text-[14px] lg:text-[13px] md:text-[13px] sm:text-[13px] xsm:text-[13px] tracking-[1px] text-[rgba(0,0,0,0.3)] pb-2.5">Over <span class=" underline " style="color:#a056fa;">100+ clients</span></div>
-							<h2 class="main-title font-normal m-0 font-Recoleta text-black xl:text-6xl lg:text-5xl text-4xl">Why <span class="inline-block relative z-[1]">choose <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#D8FFE8;"></span></span> Us.</h2>
+							<h2 class="main-title font-normal m-0 font-Recoleta text-black xl:text-6xl lg:text-5xl text-4xl">Why <span class="inline-block relative z-1">choose <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#D8FFE8;"></span></span> Us.</h2>
 						</div> <!-- /.title-style-three -->
 						<p class="font-gordita xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px] leading-[1.67em] mt-8">We're a team of sisters, Vivian and Daniela, with more than 13 years of experience combined, doing front-end development.</p>
 						<p class="font-gordita xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px] leading-[1.67em]">Even better yet, we've been using Tailwind CSS daily since 2018 and we love it.</p>
@@ -37,7 +37,7 @@ import Footer from '@components/Footer.astro';
 				<div class="xl:w-6/12 lg:w-6/12 md:w-6/12 w-full flex-[0_0_auto] pr-[12px] max-w-full xl:order-first lg:order-first md:order-first wow fadeInLeft">
 					<div class="tags-wrapper relative p-[45px_65px_50px] 2xl:p-[35px_35px_40px] lg:p-[25px_15px_30px] md:p-[25px_15px_30px] sm:p-[25px_15px_30px] xsm:p-[25px_15px_30px] rounded-[25px] bg-[#F3F7F8]">
 						<img src="images/lazy.svg" data-src="images/shape/shape_35.svg" alt="" class="lazy-img shapes shape-one absolute w-3/12 z-0 animate-[jumpThree_3s_infinite_linear] right-[1%] top-[1%]">
-						<div class="h3 !m-0 font-normal text-black ">13+</div>
+						<div class="h3 m-0! font-normal text-black ">13+</div>
 						<p class=" text-[24px] 2xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px] leading-[1.67em] opacity-50 pb-[25px] lg:pb-[10px] md:pb-[10px] sm:pb-[10px] xsm:pb-[10px]">Reason to choose us</p>
 						<ul class="flex flex-wrap items-center mb-0 pl-0 list-none m-[0_-10px]">
 							<li class=" text-[24px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px] text-black m-[10px_0] p-[0_10px] lg:m-[5px_0] md:m-[5px_0] sm:m-[5px_0] xsm:m-[5px_0]"><a class=" text-black text-[18px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px] lg:p-3 md:p-3 sm:p-3 xsm:p-3 transition-all duration-[0.3s] ease-[ease-in-out] px-[30px] py-[22px] rounded-[10px] hover:shadow-[0_15px_40px_rgba(0,0,0,0.05)] bg-white" href="#"><span class=" inline-block leading-[25px] p-[0_3px] rounded-[5px]" style="background-color: rgba(255, 130, 130, 0.13);">Great Interface</span></a></li>
@@ -60,7 +60,7 @@ import Footer from '@components/Footer.astro';
 			<div class="flex flex-wrap items-center">
 				<div class="xl:w-4/12 lg:w-4/12 md:w-6/12 mt-10 w-full flex-[0_0_auto] px-[12px] max-w-full wow fadeInUp">
 					<div class="">
-						<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Let’s <br> <span class="inline-block relative z-[1]">Discover <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#E1EDFF;"></span></span> our all features</h2>
+						<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Let’s <br> <span class="inline-block relative z-1">Discover <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#E1EDFF;"></span></span> our all features</h2>
 						<span class="mt-6 md:mt-12 lg:mt-12 xl:mt-12 block w-28 bg-black h-[3px]"></span>
 					</div> <!-- /.title-style-three -->
 				</div>
@@ -112,13 +112,13 @@ import Footer from '@components/Footer.astro';
 				<div class="flex flex-wrap mx-[-12px]">
 					<div class="xl:w-5/12 lg:w-5/12 w-full flex-[0_0_auto] px-[12px] max-w-full">
 						<div class="title-style-ten text-center xl:text-left lg:text-left wow fadeInLeft">
-							<div class="sc-title text-[15px] tracking-[3px] uppercase text-[color:var(--prime-nine)] pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FEEDBACK</div>
+							<div class="sc-title text-[15px] tracking-[3px] uppercase text-(--prime-nine) pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FEEDBACK</div>
 							<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">What <span class="relative">client <img class=" absolute z-[-1] left-0 bottom-[9px]" src="images/shape/shape_129.svg" alt=""></span> think about us.</h2>
 						</div> <!-- /.title-style-ten -->
 					</div>
 				</div>
 
-				<div class="slider-wrapper pt-[70px] lg:pt-10 md:pt-10 sm:pt-10 xsm:pt-10 wow fadeInUp w-[calc(1320px_+_25vw)] m-[0_-30px] 2xl:w-[calc(1320px_+_15vw)] lg:m-[0_-12px] lg:w-auto md:m-[0_-12px] md:w-auto sm:m-[0_-12px] sm:w-auto xsm:m-[0_-12px] xsm:w-auto">
+				<div class="slider-wrapper pt-[70px] lg:pt-10 md:pt-10 sm:pt-10 xsm:pt-10 wow fadeInUp w-[calc(1320px+25vw)] m-[0_-30px] 2xl:w-[calc(1320px+15vw)] lg:m-[0_-12px] lg:w-auto md:m-[0_-12px] md:w-auto sm:m-[0_-12px] sm:w-auto xsm:m-[0_-12px] xsm:w-auto">
 					<div class="feedback_slider_ten">
 						<div class="item m-[0_30px] lg:m-[0_12px] md:m-[0_12px] sm:m-[0_12px] xsm:m-[0_12px]">
 							<div class="feedback-block-ten xl:p-[40px_50px_40px] lg:p-[25px_20px_30px] md:p-[25px_20px_30px] sm:p-[25px_20px_30px] xsm:p-[25px_20px_30px]" style="background:#FFED4E;">
@@ -183,7 +183,7 @@ import Footer from '@components/Footer.astro';
 				</ul>
 			</div>
 		</div>
-		<img src="images/shape/shape_130.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] animate-[jumpTwo_5s_infinite_linear] left-[51%] top-[9%] md:!hidden sm:!hidden xsm:!hidden">
+		<img src="images/shape/shape_130.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] animate-[jumpTwo_5s_infinite_linear] left-[51%] top-[9%] md:hidden! sm:hidden! xsm:hidden!">
 		<img src="images/shape/shape_131.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] left-0 bottom-0">
 	</div>
 
@@ -256,17 +256,17 @@ import Footer from '@components/Footer.astro';
 
 	<div class="fancy-short-banner-thirteen py-[170px] lg:py-20 md:py-20 sm:py-20 xsm:py-20 bg-[#F6F9FB] wow fadeInUp">
 		<div class="container">
-			<div class="bg-wrapper z-[2] bg-white relative px-3 py-0 rounded-[10px]">
+			<div class="bg-wrapper z-2 bg-white relative px-3 py-0 rounded-[10px]">
 				<div class="flex flex-wrap mx-[-12px]">
 					<div class="xl:w-11/12 w-full flex-[0_0_auto] px-[12px] max-w-full m-auto">
 						<div class="flex flex-wrap mx-[-12px] items-center">
-							<div class="xl:w-6/12 lg:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full !ml-auto xl:order-last lg:order-last">
+							<div class="xl:w-6/12 lg:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full ml-auto! xl:order-last lg:order-last">
 								<div class="text-wrapper pl-20 pr-0 pt-[60px] pb-20 border-l-[#E9E9E9] border-l border-solid md:p-[50px_0] md:border-l-0 sm:p-[50px_0] sm:border-l-0 xsm:p-[50px_0] xsm:border-l-0">
 									<img src="images/lazy.svg" data-src="images/icon/icon_114.svg" alt="" class="lazy-img mb-[30px]">
 									<div class="title-style-one">
 										<h2 class="font-Recoleta font-normal text-black xl:text-6xl/[66px] lg:text-5xl/[56px] text-4xl">Let’s talk with expereince advisors.</h2>
 									</div>
-									<p class="text-[20px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] text-black pt-5 !m-0">eiusmod tempor incididunt. Ut enim mim veniam, quis nostrud elit lorem dolor.</p>
+									<p class="text-[20px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] text-black pt-5 m-0!">eiusmod tempor incididunt. Ut enim mim veniam, quis nostrud elit lorem dolor.</p>
 								</div>
 							</div>
 							<div class="xl:w-5/12 lg:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-first lg:order-first">
@@ -293,7 +293,7 @@ import Footer from '@components/Footer.astro';
 													<div class="help-block with-errors absolute bottom-[-17px] text-[13px] leading-5 text-[#ff4d44] left-0"></div>
 												</div>
 											</div>
-											<div class="w-full flex-[0_0_auto] px-[12px] max-w-full"><button class="btn-twentyTwo w-full font-medium tran3s uppercase text-[14px] leading-[55px] text-white tracking-[0.88px] px-[42px] py-0 rounded-[7px] hover:bg-[var(--prime-ten)] bg-[#a056fa]">SEND MESSAGE</button></div>
+											<div class="w-full flex-[0_0_auto] px-[12px] max-w-full"><button class="btn-twentyTwo w-full font-medium tran3s uppercase text-[14px] leading-[55px] text-white tracking-[0.88px] px-[42px] py-0 rounded-[7px] hover:bg-(--prime-ten) bg-[#a056fa]">SEND MESSAGE</button></div>
 										</div>
 										<div class="text-[16px] text-center mt-[25px] "><span class="opacity-75">Been here before?</span> <a href="#" class=" text-black font-medium hover:text-[#0a58ca]">Check your query</a></div>
 									</form>
@@ -302,8 +302,8 @@ import Footer from '@components/Footer.astro';
 						</div>
 					</div>
 				</div>
-				<div class="shapes shape-text font-medium text-[20px] text-black text-center absolute z-[-1] leading-6 top-[-62px] rotate-[-10deg] lg:rotate-[20deg] xl:rotate-[-15deg] left-10 lg:left-5 xl:-left-10">Fill the <br>form</div>
-				<img src="images/lazy.svg" data-src="images/shape/shape_90.svg" alt="" class="lazy-img shapes shape-one absolute z-[1] rotate-[100deg] lg:rotate-[70deg] xl:rotate-0 left-20 lg:-left-2 xl:left-1 -top-2.5 block scale-y-[-1] lg:scale-100 xl:scale-100">
+				<div class="shapes shape-text font-medium text-[20px] text-black text-center absolute z-[-1] leading-6 top-[-62px] rotate-[-10deg] lg:rotate-20 xl:rotate-[-15deg] left-10 lg:left-5 xl:-left-10">Fill the <br>form</div>
+				<img src="images/lazy.svg" data-src="images/shape/shape_90.svg" alt="" class="lazy-img shapes shape-one absolute z-1 rotate-100 lg:rotate-70 xl:rotate-0 left-20 lg:-left-2 xl:left-1 -top-2.5 block scale-y-[-1] lg:scale-100 xl:scale-100">
 				<img src="images/lazy.svg" data-src="images/shape/shape_91.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] left-[-60px] bottom-[-60px]">
 			</div> <!-- /.bg-wrapper -->
 		</div>
@@ -312,7 +312,7 @@ import Footer from '@components/Footer.astro';
 	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32 relative z-30">
 		<div class="container">
 			<div class="title-style-ten text-center wow fadeInUp">
-				<div class="sc-title text-[15px] tracking-[3px] uppercase text-[color:var(--prime-nine)] pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FAQ</div>
+				<div class="sc-title text-[15px] tracking-[3px] uppercase text-(--prime-nine) pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FAQ</div>
 				<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Questions & <span class="relative">Answers <img class=" absolute z-[-1] left-0 bottom-[9px]" src="images/shape/shape_132.svg" alt=""></span></h2>
 			</div> <!-- /.title-style-ten -->
 
