--- a/src/pages/post.astro
+++ b/src/pages/post.astro
@@ -10,7 +10,7 @@ import Footer from '@components/Footer.astro';
 	<div class="container flex flex-col pt-36 lg:pt-44 xl:pt-52 mb-20 lg:flex-row">
 		<div class="mx-auto w-full max-w-3xl">
 			<h2
-				class="font-Recoleta font-normal text-black xl:!text-[43px]/[48px] lg:!text-4xl !text-3xl"
+				class="font-Recoleta font-normal text-black xl:text-[43px]/[48px]! lg:text-4xl! text-3xl!"
 			>
 			How to use box shadows with Tailwind CSS, including custom and arbitrary values
 			</h2>
