--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -13,13 +13,13 @@ import Footer from '@components/Footer.astro';
 				<div class="flex flex-wrap">
 					<div class="xl:w-7/12 lg:w-7/12 w-full flex-[0_0_auto] px-[12px] max-w-full m-auto wow fadeInLeft">
 						<div class="title-style-five text-center mb-[65px] lg:mb-10 md:mb-10 sm:mb-10 xsm:mb-10">
-							<div class="sc-title-two italic relative inline-block text-[17px] text-[color:var(--prime-ten)] mb-5 pl-10 before:content-[''] before:absolute before:w-6 before:h-px before:left-0 before:top-3.5 before:bg-[var(--prime-ten)]">Our Pricing</div>
+							<div class="sc-title-two italic relative inline-block text-[17px] text-(--prime-ten) mb-5 pl-10 before:content-[''] before:absolute before:w-6 before:h-px before:left-0 before:top-3.5 before:bg-(--prime-ten)">Our Pricing</div>
 							<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">No hidden charges, <br/> Choose your plan.</h2>
 						</div>
 					</div>
 				</div>
 			</div> <!-- /.container -->
-			<img src="images/lazy.svg" data-src="images/shape/shape_172.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] right-[17%] 2xl:right-[8%] lg:right-[6%] md:!hidden sm:!hidden xsm:!hidden top-[4%]">
+			<img src="images/lazy.svg" data-src="images/shape/shape_172.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] right-[17%] 2xl:right-[8%] lg:right-[6%] md:hidden! sm:hidden! xsm:hidden! top-[4%]">
 		</div>
 	</div>
 
@@ -35,9 +35,9 @@ import Footer from '@components/Footer.astro';
 										<div class="plan  text-[32px] lg:text-[24px] md:text-[24px] sm:text-[24px] xsm:text-[24px] m-[26px_0_22px] lg:m-[20px_0_18px] md:m-[20px_0_18px] sm:m-[20px_0_18px] xsm:m-[20px_0_18px] text-black ">Starter Plan</div>
 									<div class="pr-body">
 										<ul class=" mb-0 pl-0 list-none  text-left ">
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
 										</ul>
 									</div>
 									<div class="pr-footer  pt-[45px]  lg:pt-[30px] md:pt-[30px] sm:pt-[30px] xsm:pt-[30px] ">
@@ -53,11 +53,11 @@ import Footer from '@components/Footer.astro';
 										<div class="plan  text-[32px] lg:text-[24px] md:text-[24px] sm:text-[24px] xsm:text-[24px] m-[26px_0_22px] lg:m-[20px_0_18px] md:m-[20px_0_18px] sm:m-[20px_0_18px] xsm:m-[20px_0_18px] text-black ">Silver Plan</div>
 									<div class="pr-body pt-[10px]">
 										<ul class=" mb-0 pl-0 list-none  text-left ">
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">2 website 3 sub domain</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Backling</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">2 website 3 sub domain</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Backling</li>
 										</ul>
 									</div>
 									<div class="pr-footer  pt-[45px]  lg:pt-[30px] md:pt-[30px] sm:pt-[30px] xsm:pt-[30px] ">
@@ -73,9 +73,9 @@ import Footer from '@components/Footer.astro';
 										<div class="plan  text-[32px] lg:text-[24px] md:text-[24px] sm:text-[24px] xsm:text-[24px] m-[26px_0_22px] lg:m-[20px_0_18px] md:m-[20px_0_18px] sm:m-[20px_0_18px] xsm:m-[20px_0_18px] text-black ">Gold Plan</div>
 									<div class="pr-body">
 										<ul class=" mb-0 pl-0 list-none  text-left ">
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
 										</ul>
 									</div>
 									<div class="pr-footer  pt-[45px]  lg:pt-[30px] md:pt-[30px] sm:pt-[30px] xsm:pt-[30px] ">
@@ -91,9 +91,9 @@ import Footer from '@components/Footer.astro';
 										<div class="plan  text-[32px] lg:text-[24px] md:text-[24px] sm:text-[24px] xsm:text-[24px] m-[26px_0_22px] lg:m-[20px_0_18px] md:m-[20px_0_18px] sm:m-[20px_0_18px] xsm:m-[20px_0_18px] text-black ">Dimond Plan</div>
 									<div class="pr-body">
 										<ul class=" mb-0 pl-0 list-none  text-left ">
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
-											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-[color:var(--prime-two)] before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Unlimited Email</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">5gb Hosting & Domain</li>
+											<li class=" text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] relative mb-[15px] pl-7 before:content-['\f272'] before:font-bold before:absolute before:text-(--prime-two) before:left-0 before:top-0 before:font-Bootstrap">Email & Live chat.</li>
 										</ul>
 									</div>
 									<div class="pr-footer  pt-[45px]  lg:pt-[30px] md:pt-[30px] sm:pt-[30px] xsm:pt-[30px] ">
@@ -119,13 +119,13 @@ import Footer from '@components/Footer.astro';
 				<div class="flex flex-wrap mx-[-12px]">
 					<div class="xl:w-5/12 lg:w-5/12 w-full flex-[0_0_auto] px-[12px] max-w-full">
 						<div class="title-style-ten text-center xl:text-left lg:text-left wow fadeInLeft">
-							<div class="sc-title text-[15px] tracking-[3px] uppercase text-[color:var(--prime-nine)] pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FEEDBACK</div>
+							<div class="sc-title text-[15px] tracking-[3px] uppercase text-(--prime-nine) pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FEEDBACK</div>
 							<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">What <span class="relative">client <img class=" absolute z-[-1] left-0 bottom-[9px]" src="images/shape/shape_129.svg" alt=""></span> think about us.</h2>
 						</div> <!-- /.title-style-ten -->
 					</div>
 				</div>
 
-				<div class="slider-wrapper pt-[70px] lg:pt-10 md:pt-10 sm:pt-10 xsm:pt-10 wow fadeInUp w-[calc(1320px_+_25vw)] m-[0_-30px] 2xl:w-[calc(1320px_+_15vw)] lg:m-[0_-12px] lg:w-auto md:m-[0_-12px] md:w-auto sm:m-[0_-12px] sm:w-auto xsm:m-[0_-12px] xsm:w-auto">
+				<div class="slider-wrapper pt-[70px] lg:pt-10 md:pt-10 sm:pt-10 xsm:pt-10 wow fadeInUp w-[calc(1320px+25vw)] m-[0_-30px] 2xl:w-[calc(1320px+15vw)] lg:m-[0_-12px] lg:w-auto md:m-[0_-12px] md:w-auto sm:m-[0_-12px] sm:w-auto xsm:m-[0_-12px] xsm:w-auto">
 					<div class="feedback_slider_ten">
 						<div class="item m-[0_30px] lg:m-[0_12px] md:m-[0_12px] sm:m-[0_12px] xsm:m-[0_12px]">
 							<div class="feedback-block-ten xl:p-[40px_50px_40px] lg:p-[25px_20px_30px] md:p-[25px_20px_30px] sm:p-[25px_20px_30px] xsm:p-[25px_20px_30px]" style="background:#FFED4E;">
@@ -190,23 +190,23 @@ import Footer from '@components/Footer.astro';
 				</ul>
 			</div>
 		</div>
-		<img src="images/shape/shape_130.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] animate-[jumpTwo_5s_infinite_linear] left-[51%] top-[9%] md:!hidden sm:!hidden xsm:!hidden">
+		<img src="images/shape/shape_130.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] animate-[jumpTwo_5s_infinite_linear] left-[51%] top-[9%] md:hidden! sm:hidden! xsm:hidden!">
 		<img src="images/shape/shape_131.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] left-0 bottom-0">
 	</div>
 
 	<div class="fancy-short-banner-thirteen py-[170px] lg:py-20 md:py-20 sm:py-20 xsm:py-20 bg-[#F6F9FB] wow fadeInUp">
 		<div class="container">
-			<div class="bg-wrapper z-[2] bg-white relative px-3 py-0 rounded-[10px]">
+			<div class="bg-wrapper z-2 bg-white relative px-3 py-0 rounded-[10px]">
 				<div class="flex flex-wrap mx-[-12px]">
 					<div class="xl:w-11/12 w-full flex-[0_0_auto] px-[12px] max-w-full m-auto">
 						<div class="flex flex-wrap mx-[-12px] items-center">
-							<div class="xl:w-6/12 lg:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full !ml-auto xl:order-last lg:order-last">
+							<div class="xl:w-6/12 lg:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full ml-auto! xl:order-last lg:order-last">
 								<div class="text-wrapper pl-20 pr-0 pt-[60px] pb-20 border-l-[#E9E9E9] border-l border-solid md:p-[50px_0] md:border-l-0 sm:p-[50px_0] sm:border-l-0 xsm:p-[50px_0] xsm:border-l-0">
 									<img src="images/lazy.svg" data-src="images/icon/icon_114.svg" alt="" class="lazy-img mb-[30px]">
 									<div class="title-style-one">
 										<h2 class="font-Recoleta font-normal text-black xl:text-6xl/[66px] lg:text-5xl/[56px] text-4xl">Let’s talk with expereince advisors.</h2>
 									</div>
-									<p class="text-[20px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] text-black pt-5 !m-0">eiusmod tempor incididunt. Ut enim mim veniam, quis nostrud elit lorem dolor.</p>
+									<p class="text-[20px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] text-black pt-5 m-0!">eiusmod tempor incididunt. Ut enim mim veniam, quis nostrud elit lorem dolor.</p>
 								</div>
 							</div>
 							<div class="xl:w-5/12 lg:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-first lg:order-first">
@@ -233,7 +233,7 @@ import Footer from '@components/Footer.astro';
 													<div class="help-block with-errors absolute bottom-[-17px] text-[13px] leading-5 text-[#ff4d44] left-0"></div>
 												</div>
 											</div>
-											<div class="w-full flex-[0_0_auto] px-[12px] max-w-full"><button class="btn-twentyTwo w-full font-medium tran3s uppercase text-[14px] leading-[55px] text-white tracking-[0.88px] px-[42px] py-0 rounded-[7px] hover:bg-[var(--prime-ten)] bg-[#a056fa]">SEND MESSAGE</button></div>
+											<div class="w-full flex-[0_0_auto] px-[12px] max-w-full"><button class="btn-twentyTwo w-full font-medium tran3s uppercase text-[14px] leading-[55px] text-white tracking-[0.88px] px-[42px] py-0 rounded-[7px] hover:bg-(--prime-ten) bg-[#a056fa]">SEND MESSAGE</button></div>
 										</div>
 										<div class="text-[16px] text-center mt-[25px] "><span class="opacity-75">Been here before?</span> <a href="#" class=" text-black font-medium hover:text-[#0a58ca]">Check your query</a></div>
 									</form>
@@ -242,8 +242,8 @@ import Footer from '@components/Footer.astro';
 						</div>
 					</div>
 				</div>
-				<div class="shapes shape-text font-medium text-[20px] text-black text-center absolute z-[-1] leading-6 top-[-62px] rotate-[-10deg] lg:rotate-[20deg] xl:rotate-[-15deg] left-10 lg:left-5 xl:-left-10">Fill the <br>form</div>
-				<img src="images/lazy.svg" data-src="images/shape/shape_90.svg" alt="" class="lazy-img shapes shape-one absolute z-[1] rotate-[100deg] lg:rotate-[70deg] xl:rotate-0 left-20 lg:-left-2 xl:left-1 -top-2.5 block scale-y-[-1] lg:scale-100 xl:scale-100">
+				<div class="shapes shape-text font-medium text-[20px] text-black text-center absolute z-[-1] leading-6 top-[-62px] rotate-[-10deg] lg:rotate-20 xl:rotate-[-15deg] left-10 lg:left-5 xl:-left-10">Fill the <br>form</div>
+				<img src="images/lazy.svg" data-src="images/shape/shape_90.svg" alt="" class="lazy-img shapes shape-one absolute z-1 rotate-100 lg:rotate-70 xl:rotate-0 left-20 lg:-left-2 xl:left-1 -top-2.5 block scale-y-[-1] lg:scale-100 xl:scale-100">
 				<img src="images/lazy.svg" data-src="images/shape/shape_91.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] left-[-60px] bottom-[-60px]">
 			</div> <!-- /.bg-wrapper -->
 		</div>
@@ -252,7 +252,7 @@ import Footer from '@components/Footer.astro';
 	<div class="fancy-feature-thirtyThree mt-16 sm:mt-20 md:mt-20 lg:mt-24 xl:mt-32 mb-20 sm:mb-24 md:mb-24 lg:mb-28 xl:mb-32 relative z-30">
 		<div class="container">
 			<div class="title-style-ten text-center wow fadeInUp">
-				<div class="sc-title text-[15px] tracking-[3px] uppercase text-[color:var(--prime-nine)] pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FAQ</div>
+				<div class="sc-title text-[15px] tracking-[3px] uppercase text-(--prime-nine) pb-4 lg:text-[13px] lg:pb-2.5 md:text-[13px] md:pb-2.5 sm:text-[13px] sm:pb-2.5 xsm:text-[13px] xsm:pb-2.5">FAQ</div>
 				<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Questions & <span class="relative">Answers <img class=" absolute z-[-1] left-0 bottom-[9px]" src="images/shape/shape_132.svg" alt=""></span></h2>
 			</div> <!-- /.title-style-ten -->
 
