--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import Footer from '@components/Footer.astro';
 				<div class="flex flex-wrap">
 					<div class="xl:w-7/12 lg:w-7/12 w-full flex-[0_0_auto] px-[12px] max-w-full m-auto wow fadeInLeft">
 						<div class="title-style-five text-center">
-							<div class="sc-title-two italic relative inline-block text-[17px] text-[color:var(--prime-ten)] mb-5 pl-10 before:content-[''] before:absolute before:w-6 before:h-px before:left-0 before:top-3.5 before:bg-[var(--prime-ten)]">About</div>
+							<div class="sc-title-two italic relative inline-block text-[17px] text-(--prime-ten) mb-5 pl-10 before:content-[''] before:absolute before:w-6 before:h-px before:left-0 before:top-3.5 before:bg-(--prime-ten)">About</div>
 							<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">A little about Us</h2>
 							<p class=" text-base lg:text-lg xl:text-xl pt-7 mb-0">We're a team of sisters, Vivian and Daniela, with more than 10 years of experience combined, doing front-end development. Even better yet, we've been using Tailwind CSS daily since 2018 and we love it.
 							</p>
@@ -21,18 +21,18 @@ import Footer from '@components/Footer.astro';
 					</div>
 				</div>
 			</div> <!-- /.container -->
-			<img src="images/lazy.svg" data-src="images/shape/shape_172.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] right-[17%] 2xl:right-[8%] lg:right-[6%] md:!hidden sm:!hidden xsm:!hidden top-[4%]">
+			<img src="images/lazy.svg" data-src="images/shape/shape_172.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] right-[17%] 2xl:right-[8%] lg:right-[6%] md:hidden! sm:hidden! xsm:hidden! top-[4%]">
 		</div>
 	</div>
 
 	<div class="fancy-feature-five xl:mb-24 lg:mb-24 md:mb-20 mb-16">
 		<div class="container">
 			<div class="flex flex-wrap items-center">
-				<div class="xl:w-[45%] lg:w-[45%] md:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-last lg:order-last md:order-last !ml-auto">
-					<div class="block-style-two xxl:!pr-[3rem] sm:mb-[50px] xsm:mb-[50px]  wow fadeInRight">
+				<div class="xl:w-[45%] lg:w-[45%] md:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-last lg:order-last md:order-last ml-auto!">
+					<div class="block-style-two xxl:pr-12! sm:mb-[50px] xsm:mb-[50px]  wow fadeInRight">
 						<div class="title-style-three">
 							<div class="sc-title uppercase text-[14px] lg:text-[13px] md:text-[13px] sm:text-[13px] xsm:text-[13px] tracking-[1px] text-[rgba(0,0,0,0.3)] pb-2.5">Over <span class=" underline " style="color:#a056fa;">100+ clients</span></div>
-							<h2 class="main-title font-normal m-0 font-Recoleta text-black xl:text-6xl lg:text-5xl text-4xl">Why <span class="inline-block relative z-[1]">choose <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#D8FFE8;"></span></span> Us.</h2>
+							<h2 class="main-title font-normal m-0 font-Recoleta text-black xl:text-6xl lg:text-5xl text-4xl">Why <span class="inline-block relative z-1">choose <span class="mark-bg absolute left-[-5px] -translate-y-2/4 w-[98%] h-[50px] z-[-1] top-2/4 md:h-[34px] sm:h-[34px] xsm:h-[34px]" style="background-color:#D8FFE8;"></span></span> Us.</h2>
 						</div> <!-- /.title-style-three -->
 						<p class="font-gordita xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px] leading-[1.67em] mt-8">We're a team of sisters, Vivian and Daniela, with more than 13 years of experience combined, doing front-end development.</p>
 						<p class="font-gordita xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px] leading-[1.67em]">Even better yet, we've been using Tailwind CSS daily since 2018 and we love it.</p>
@@ -42,7 +42,7 @@ import Footer from '@components/Footer.astro';
 				<div class="xl:w-6/12 lg:w-6/12 md:w-6/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-first lg:order-first md:order-first wow fadeInLeft">
 					<div class="tags-wrapper relative p-[45px_65px_50px] 2xl:p-[35px_35px_40px] lg:p-[25px_15px_30px] md:p-[25px_15px_30px] sm:p-[25px_15px_30px] xsm:p-[25px_15px_30px] rounded-[25px] bg-[#F3F7F8]">
 						<img src="images/lazy.svg" data-src="images/shape/shape_35.svg" alt="" class="lazy-img shapes shape-one absolute w-3/12 z-0 animate-[jumpThree_3s_infinite_linear] right-[1%] top-[1%]">
-						<div class="h3 !m-0 font-normal text-black ">13+</div>
+						<div class="h3 m-0! font-normal text-black ">13+</div>
 						<p class=" text-[24px] 2xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px] leading-[1.67em] opacity-50 pb-[25px] lg:pb-[10px] md:pb-[10px] sm:pb-[10px] xsm:pb-[10px]">Reason to choose us</p>
 						<ul class="flex flex-wrap items-center mb-0 pl-0 list-none m-[0_-10px]">
 							<li class=" text-[24px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px] text-black m-[10px_0] p-[0_10px] lg:m-[5px_0] md:m-[5px_0] sm:m-[5px_0] xsm:m-[5px_0]"><a class=" text-black text-[18px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px] lg:p-3 md:p-3 sm:p-3 xsm:p-3 transition-all duration-[0.3s] ease-[ease-in-out] px-[30px] py-[22px] rounded-[10px] hover:shadow-[0_15px_40px_rgba(0,0,0,0.05)] bg-white" href="#"><span class=" inline-block leading-[25px] p-[0_3px] rounded-[5px]" style="background-color: rgba(255, 130, 130, 0.13);">Great Interface</span></a></li>
@@ -68,32 +68,32 @@ import Footer from '@components/Footer.astro';
 
 			<div class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-x-12 xl:gap-x-24 gap-y-6 lg:gap-y-10 pt-10 md:pt-14 xl:pt-20">
 				<div class="text-center xl:text-left lg:text-left w-full wow fadeInUp">
-					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%_+_6px)] before:h-[calc(100%_+_6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-code.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
+					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%+6px)] before:h-[calc(100%+6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-code.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
 					<h4 class="mt-6 lg:mt-[30px] mb-5 lg:mb-[10px] md:mb-[10px] sm:mb-[10px] xsm:mb-[10px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">High Quality Code</h4>
 					<p>Integrating your apps couldn't be any easier through Installation.</p>
 				</div>
 				<div class="text-center xl:text-left lg:text-left w-full wow fadeInUp" data-wow-delay="0.2s">
-					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%_+_6px)] before:h-[calc(100%_+_6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-seo.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
+					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%+6px)] before:h-[calc(100%+6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-seo.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
 					<h4 class="mt-6 lg:mt-[30px] mb-5 lg:mb-[10px] md:mb-[10px] sm:mb-[10px] xsm:mb-[10px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">SEO & Speed Optimized </h4>
 					<p>Linking your site to your domain name has never been easier with GoDaddy registered domain.</p>
 				</div>
 				<div class="text-center xl:text-left lg:text-left w-full wow fadeInUp" data-wow-delay="0.4s">
-					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%_+_6px)] before:h-[calc(100%_+_6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-accessibility.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
+					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%+6px)] before:h-[calc(100%+6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-accessibility.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
 					<h4 class="mt-6 lg:mt-[30px] mb-5 lg:mb-[10px] md:mb-[10px] sm:mb-[10px] xsm:mb-[10px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">Accessible code</h4>
 					<p>Get peace of mind, knowing network dsu security and visitors</p>
 				</div>
 				<div class="text-center xl:text-left lg:text-left w-full wow fadeInUp">
-					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%_+_6px)] before:h-[calc(100%_+_6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-organization.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
+					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%+6px)] before:h-[calc(100%+6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-organization.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
 					<h4 class="mt-6 lg:mt-[30px] mb-5 lg:mb-[10px] md:mb-[10px] sm:mb-[10px] xsm:mb-[10px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">100% White Label</h4>
 					<p>Includes industry-standard cPanel to install apps, manage backups and security.</p>
 				</div>
 				<div class="text-center xl:text-left lg:text-left  w-full wow fadeInUp" data-wow-delay="0.2s">
-					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%_+_6px)] before:h-[calc(100%_+_6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-structure.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
+					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%+6px)] before:h-[calc(100%+6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-structure.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
 					<h4 class="mt-6 lg:mt-[30px] mb-5 lg:mb-[10px] md:mb-[10px] sm:mb-[10px] xsm:mb-[10px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">Component-Based Structure</h4>
 					<p>If you require more power for your site, seamlessly increase your CPU/RAM, I/O and storage with 1 click.</p>
 				</div>
 				<div class="text-center xl:text-left lg:text-left  w-full wow fadeInUp" data-wow-delay="0.4s">
-					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%_+_6px)] before:h-[calc(100%_+_6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-communication.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
+					<div class="icon flex items-center justify-center relative rounded-[50%] w-[65px] h-[65px] lg:w-[60px] lg:h-[60px] md:w-[50px] md:h-[50px] sm:w-[50px] sm:h-[50px] xsm:w-[50px] xsm:h-[50px] border-[3px] border-solid border-black before:content-[''] before:absolute before:w-[calc(100%+6px)] before:h-[calc(100%+6px)] before:top-[-3px] before:z-[-1] before:rounded-[50%] before:left-[5px] md:m-[0_auto] sm:m-[0_auto] xsm:m-[0_auto] before:bg-[#cac6fc]"><img src="images/lazy.svg" data-src="images/icon/icon-communication.svg" alt="" class="lazy-img h-6 xl:h-7"></div>
 					<h4 class="mt-6 lg:mt-[30px] mb-5 lg:mb-[10px] md:mb-[10px] sm:mb-[10px] xsm:mb-[10px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">Fast and clear communication</h4>
 					<p>Get faster page loads & better customer experience with lorem.</p>
 				</div> <!-- /.card-style-eleven -->
@@ -131,7 +131,7 @@ import Footer from '@components/Footer.astro';
 			</div> <!-- /.card-wrapper -->
 		</div> <!-- /.container -->
 
-		<img src="images/lazy.svg" data-src="images/shape/shape_189.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] left-0 md:-top-10 lg:-top-10 xl:top-[4%] sm:!hidden xsm:!hidden">
+		<img src="images/lazy.svg" data-src="images/shape/shape_189.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] left-0 md:-top-10 lg:-top-10 xl:top-[4%] sm:hidden! xsm:hidden!">
 	</div>
 
 
