--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,7 +13,7 @@ import Footer from '@components/Footer.astro';
 				<div class="flex flex-wrap">
 					<div class="wow fadeInLeft">
 						<div class="title-style-five xl:mb-16 lg:mb-16 md:mb-16 sm:mb-10 xsm:mb-10">
-							<div class="sc-title-two italic relative inline-block text-[17px] text-[color:var(--prime-ten)] mb-5 pl-10 before:content-[''] before:absolute before:w-6 before:h-px before:left-0 before:top-3.5 before:bg-[var(--prime-ten)]">Blog</div>
+							<div class="sc-title-two italic relative inline-block text-[17px] text-(--prime-ten) mb-5 pl-10 before:content-[''] before:absolute before:w-6 before:h-px before:left-0 before:top-3.5 before:bg-(--prime-ten)">Blog</div>
 							<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Latest posts</h2>
 							<p class="text-black text-xl pt-7">Check out our posts for the latest news, tutorials, <br/> tips and tricks for Tailwind CSS
 							</p>
@@ -21,7 +21,7 @@ import Footer from '@components/Footer.astro';
 					</div>
 				</div>
 			</div> <!-- /.container -->
-			<img src="images/lazy.svg" data-src="images/shape/shape_172.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] right-[17%] 2xl:right-[8%] lg:right-[6%] md:!hidden sm:!hidden xsm:!hidden top-[4%]">
+			<img src="images/lazy.svg" data-src="images/shape/shape_172.svg" alt="" class="lazy-img shapes shape-two absolute z-[-1] right-[17%] 2xl:right-[8%] lg:right-[6%] md:hidden! sm:hidden! xsm:hidden! top-[4%]">
 		</div>
 	</div>
 
@@ -30,7 +30,7 @@ import Footer from '@components/Footer.astro';
 			<div class="flex flex-col gap-8">
 				<a
 					href="/post"
-					class="border-[#b1b2f4] bg-white group flex flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
+					class="border-[#b1b2f4] bg-white group flex flex-col overflow-hidden rounded-xl border shadow-sm shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
 						<div class="flex">
@@ -64,7 +64,7 @@ import Footer from '@components/Footer.astro';
 				</a>
 				<a
 					href="/post"
-					class="border-[#b1b2f4] bg-white flex group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
+					class="border-[#b1b2f4] bg-white flex group flex-col overflow-hidden rounded-xl border shadow-sm shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
 						<div class="flex">
@@ -98,7 +98,7 @@ import Footer from '@components/Footer.astro';
 				</a>
 				<a
 					href="/post"
-					class="border-[#b1b2f4] flex bg-white group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
+					class="border-[#b1b2f4] flex bg-white group flex-col overflow-hidden rounded-xl border shadow-sm shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
 						<div class="flex">
